# mlflow-hands_on

./: .gitignore  Makefile  README.md  __init__.py  dataset.py  features.py  plots.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
modeling/: predict.py  train.py
models/: final_model.pkl
