[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlflow_hands_on"
version = "0.0.1"
description = "Mlflow Hands On"
authors = [
  { name = "Anshuman Mahato" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mlflow_hands_on"]
include = ["pyproject.toml", "mlflow_hands_on/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlflow_hands_on"]
force-sort-within-sections = true

